# sgs_q

./: # Code Citations.md  .gitignore  LICENSE  README.md  gcn.ipynb  hello.py  pyproject.toml  sgs_gqnn.ipynb  sgs_q.ipynb
